#235 Remove JVM 17 args from tests